<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SlickUPnP</string>
    <string name="app_version" translatable="false">1.0.1</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="msg_icon">Picture</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="menu_title">Menu</string>
    <string name="menuItem_settings">Preferences</string>
    <string name="menuItemText_settings">Customize your preferences</string>

    <string name="menuItem_about">About</string>
    <string name="menuItemText_about">All about SlickUPnP</string>

    <string name="menuItem_exit">Exit</string>
    <string name="menuItemText_exit">Exit the App</string>

    <string name="about_versionHeadline">Version information:</string>
    <string name="about_version">Version</string>
    <string name="about_developer">Developer</string>
    <string name="about_developer_name" translatable="false">txthomas</string>
    <string name="about_website">Website</string>
    <string name="about_website_url" translatable="false">https://txserver.de</string>

    <string name="info_searching">Reloading...</string>
    <string name="info_errorlist_folders">Error while listening folders</string>
    <string name="info_still_loading">The device is still being loaded, please wait and try again</string>
    <string name="info_could_not_start_activity">Could not start activity (not sure why, please contact developer)</string>
    <string name="info_no_handler">No application for handling this content type available</string>
    <string name="info_folder">Folder</string>
    <string name="info_file">File</string>
    <string name="info_items">items</string>
    <string name="info_no_wifi">Please enable your wireless connection</string>
    
    <string name="settings_title_devices">Devices</string>
    <string name="settings_validate_devices">Validate devices</string>
    <string name="settings_validate_devices_description">Do additional validation before displaying a device (slower)</string>
    <string name="settings_title_icons">Icons</string>
    <string name="settings_show_icons">Display icons</string>
    <string name="settings_show_icons_description">Display icons for folders and items</string>
    <string name="settings_hide_file_icons">Hide icons for files</string>
    <string name="settings_hide_file_icons_description">Hide icons for file entries</string>
    <string name="settings_show_device_icons">Display device icons</string>
    <string name="settings_show_device_icons_description">Download and display device icons</string>
    <string name="settings_title_files">Files</string>
    <string name="settings_show_extensions">Display file extensions</string>
    <string name="settings_show_extensions_description">Append extensions to file names</string>
</resources>
