<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:disableDependentsState="true" >

    <PreferenceCategory android:title="@string/settings_title_devices">

        <CheckBoxPreference
            android:key="settings_validate_devices"
            android:title="@string/settings_validate_devices"
            android:summary="@string/settings_validate_devices_description" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_icons">

        <CheckBoxPreference
            android:key="settings_show_icons"
            android:title="@string/settings_show_icons"
            android:defaultValue="true"
            android:summary="@string/settings_show_icons_description" />

        <CheckBoxPreference
            android:key="settings_show_device_icons"
            android:title="@string/settings_show_device_icons"
            android:dependency="settings_show_icons"
            android:defaultValue="true"
            android:summary="@string/settings_show_device_icons_description" />

        <CheckBoxPreference
            android:key="settings_hide_file_icons"
            android:title="@string/settings_hide_file_icons"
            android:dependency="settings_show_icons"
            android:defaultValue="false"
            android:summary="@string/settings_hide_file_icons_description" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_files">

        <CheckBoxPreference
            android:key="settings_show_extensions"
            android:title="@string/settings_show_extensions"
            android:defaultValue="false"
            android:summary="@string/settings_show_extensions_description" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/menuItem_about">

        <EditTextPreference
            android:key="about_version"
            android:title="@string/about_version"
            android:summary="@string/placeholder"
            android:enabled="false" />

        <PreferenceScreen
            android:title="@string/about_website"
            android:summary="@string/about_website_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_website_url" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
